--- a/workshop/exercise-8/index.html
+++ b/workshop/exercise-8/index.html
@@ -1,1 +1,31 @@
 <!-- ...crickets... -->
+<!DOCTYPE html>
+<html>  
+    <body>
+        <h1> Registration Form</h1>
+        <form>
+            <label>Username</label><input type="text">
+            <label>password</label><input type="text">
+            <label>Email</label><input type="text">
+        <h2>Which taxi do you require</h2>
+            <input type="radio"> <label>Car</label>
+            <input type="radio"> <label>Van</label>
+            <input type="radio"> <label>Tuk Tuk</label>
+        <h2>Choose your extras</h2>
+            <input type="checkbox"> <label>Baby seat</label>
+            <input type="checkbox"> <label>Wheelchair access</label>
+            <input type="checkbox"> <label>Privacy Windows</label>
+        <h2>Where whould you like us to pick you up?</h2>
+        <label>Pickup Location:</label><select>
+            <option>Select One</option>
+            <option>Airport</option>
+            <option>Home</option>
+            <option>Hotel</option>
+        </select>
+        <h2>Additonal Instructions</h2>
+        <label>special</label>
+        <textarea>provide special instructions here</textarea>
+        <button>Submit</button>
+        </form>   
+    </body>
+</html>
